--- a/composer.json
+++ b/composer.json
@@ -14,21 +14,26 @@
 		}
 	],
 	"autoload": {
-		"files": ["src/Functions.php"]
+		"files": [
+			"src/Functions.php"
+		]
 	},
 	"require": {
-		"php": ">=5.3.3"
+		"php": ">=5.5.9"
 	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9.0",
 		"phpunit/phpunit": "4.6.*",
-		"mediawiki/mediawiki-codesniffer": "0.5.0"
+		"mediawiki/mediawiki-codesniffer": "0.12.0"
 	},
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor",
 			"phpunit $PHPUNIT_ARGS",
-			"phpcs -p"
+			"phpcs -sp"
+		],
+		"fix": [
+			"phpcbf"
 		]
 	}
 }
