build: Updating phpunit/phpunit to 4.8.36
Change-Id: I35999a93884922b0ef4614652aa0102bc3974e99

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9.0",
-		"phpunit/phpunit": "4.6.*",
+		"phpunit/phpunit": "4.8.36",
 		"mediawiki/mediawiki-codesniffer": "15.0.0"
 	},
 	"scripts": {
