--- a/composer.json
+++ b/composer.json
@@ -24,16 +24,19 @@
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9.0",
 		"phpunit/phpunit": "4.8.36",
-		"mediawiki/mediawiki-codesniffer": "16.0.0"
+		"mediawiki/mediawiki-codesniffer": "16.0.0",
+		"mediawiki/minus-x": "0.3.1"
 	},
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor",
 			"phpunit $PHPUNIT_ARGS",
-			"phpcs -sp"
+			"phpcs -sp",
+			"minus-x check ."
 		],
 		"fix": [
-			"phpcbf"
+			"phpcbf",
+			"minus-x fix ."
 		]
 	}
 }
