Use SPDX 3.0 license identifier
SPDX released version 3 of their license list (<https://spdx.org/licenses/>),
which changed the FSF licenses to explicitly end in -only or -or-later
instead of relying on an easy to miss + symbol.

Bug: T183858
Change-Id: I7401bce3622c266bf37f118eeaf8376bae3c27c1

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "wikimedia/base-convert",
 	"description": "Convert an arbitrarily-long string from one numeric base to another, optionally zero-padding to a minimum column width.",
-	"license": "GPL-2.0+",
+	"license": "GPL-2.0-or-later",
 	"homepage": "https://www.mediawiki.org/wiki/base_convert",
 	"authors": [
 		{
