--- a/.gitattributes
+++ b/.gitattributes
@@ -7,5 +7,6 @@ Doxyfile export-ignore
 composer.json export-ignore
 .phpcs.xml export-ignore
 phpunit.xml.dist export-ignore
+.phan/ export-ignore
 build/ export-ignore
 tests/ export-ignore
