--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,10 @@
 		"php-parallel-lint/php-parallel-lint": "1.3.2",
 		"phpunit/phpunit": "^8.5"
 	},
+	"suggest": {
+		"ext-gmp": "Optional, for improved performance",
+		"ext-bcmath": "Optional, for improved performance"
+	},
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor",
