--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,16 @@
 		]
 	},
 	"require": {
-		"php": ">=7.2.9"
+		"php": ">=7.4.0"
 	},
 	"require-dev": {
-		"mediawiki/mediawiki-codesniffer": "39.0.0",
+		"mediawiki/mediawiki-codesniffer": "40.0.1",
 		"mediawiki/mediawiki-phan-config": "0.12.0",
 		"mediawiki/minus-x": "1.1.1",
-		"ockcyp/covers-validator": "1.4.0",
+		"ockcyp/covers-validator": "1.6.0",
 		"php-parallel-lint/php-console-highlighter": "1.0.0",
 		"php-parallel-lint/php-parallel-lint": "1.3.2",
-		"phpunit/phpunit": "^8.5"
+		"phpunit/phpunit": "^9.5"
 	},
 	"suggest": {
 		"ext-gmp": "Optional, for improved performance",
@@ -40,7 +40,7 @@
 			"phpunit",
 			"covers-validator",
 			"@phpcs",
-			"phan --allow-polyfill-parser --long-progress-bar",
+			"@phan",
 			"minus-x check ."
 		],
 		"cover": "phpunit --coverage-html coverage",
